# space-mesh

./: .gitignore  .gk.yaml  Makefile  PRODUCT.md  README.md
.github/workflows/: release.yml
app/: Package.swift
app/Sources/SpaceMeshApp/: AppModel.swift  AppsView.swift  BackgroundAgent.swift  CategoriesView.swift  ChangesView.swift  CleanupModel.swift  CleanupView.swift  ContentView.swift  DuplicatesView.swift  GitView.swift  ReclaimPlan.swift  ScanningView.swift  SelfTest.swift  Settings.swift  SettingsView.swift  SpaceMeshApp.swift  Squarify.swift  StaleView.swift  SuggestionStore.swift  Theme.swift  TreemapView.swift  VolumeStatus.swift
app/Sources/SpaceMeshCore/: space_ffi.swift
app/Sources/space_ffiFFI/: shim.c
app/Sources/space_ffiFFI/include/: module.modulemap  space_ffiFFI.h
core/: Cargo.toml
core/cli/: Cargo.toml
core/cli/src/: main.rs
core/dedup/: Cargo.toml
core/dedup/src/: lib.rs
core/ffi/: Cargo.toml
core/ffi/examples/: rescan_bench.rs
core/ffi/src/: lib.rs
core/git/: Cargo.toml
core/git/examples/: probe.rs
core/git/src/: lib.rs  tests.rs
core/index/: Cargo.toml
core/index/src/: lib.rs
core/index/tests/: cache_bench.rs
core/rules/: Cargo.toml  rules.json
core/rules/examples/: categories.rs  detect.rs
core/rules/src/: advisor.rs  apps.rs  categories.rs  lib.rs  suggest.rs
core/scanner/: Cargo.toml
core/scanner/examples/: clone_bench.rs
core/scanner/src/: lib.rs  merge.rs
docs/: phase2-design.md
packaging/: Info.plist
scripts/: package-app.sh  update-homebrew-cask.sh
