[workspace]
resolver = "2"
members = ["scanner", "index", "rules", "dedup", "git", "ffi", "cli"]

[workspace.package]
version = "0.2.0"
edition = "2021"

[workspace.dependencies]
rayon = "1"
dashmap = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }

[profile.release]
lto = "thin"
